5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4188/executions/1644_2447.log
== TEST (2019-04-09 16:05:59) 
-- CODE:
a=float(input("preco: "))
b=float(input("pagamento: "))
if (a>b):
	s=a-b
	print("falta de"round(s,2))
else: 
	s=b-a
	print("troco de" round(s,2))
	
-- ERROR:
File "XXXX", line 5
    print("falta de"round(s,2))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:06:08) 
-- CODE:
a=float(input("preco: "))
b=float(input("pagamento: "))
if (a>b):
	s=a-b
	print("falta de" round(s,2))
else: 
	s=b-a
	print("troco de" round(s,2))
	
-- ERROR:
File "XXXX", line 5
    print("falta de" round(s,2))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:06:23) 
-- CODE:
a=float(input("preco: "))
b=float(input("pagamento: "))
if (a>b):
	s=a-b
	print("falta de", round(s,2))
else: 
	s=b-a
	print("troco de", round(s,2))
	
-- OUTPUT:
falta de 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:06:35) 
-- CODE:
a=float(input("preco: "))
b=float(input("pagamento: "))
if (a>b):
	s=a-b
	print("falta de", round(s,2))
else: 
	s=b-a
	print("troco de", round(s,2))
	
-- EXECUTION TIME:
0.136876
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta de 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:07:06) 
-- CODE:
a=float(input("preco: "))
b=float(input("pagamento: "))
if (a>b):
	s=a-b
	print("falta de ", round(s,2))
else: 
	s=b-a
	print("troco de ", round(s,2))
	
-- EXECUTION TIME:
0.223345
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta de  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de  0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:07:21) 
-- CODE:
a=float(input("preco: "))
b=float(input("pagamento: "))
if (a>b):
	s=a-b
	print("falta de ", round(s,2))
else: 
	s=b-a
	print("troco de ", round(s,2))
	
-- OUTPUT:
falta de  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:07:45) 
-- CODE:
a=float(input("preco: "))
b=float(input("pagamento: "))
if (a>b):
	s=a-b
	print("falta de ", round(s,2))
else: 
	s=b-a
	print("troco de ", round(s,2))
	
-- EXECUTION TIME:
0.139658
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta de  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de  0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:08:12) 
-- CODE:
a=float(input("preco: "))
b=float(input("pagamento: "))
if (a>b):
	s=a-b
	print("falta de ", round(s,2))
else: 
	print("troco de ", round(s,2))
	
-- OUTPUT:
falta de  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:08:58) 
-- CODE:
a=float(input("preco: "))
b=float(input("pagamento: "))
if (a>b):
	s=a-b
	print("falta de ", round(s,2))
else: 
	s=b-a
	print("troco de ", round(s,2))
	
-- OUTPUT:
falta de  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:09:41) 
-- CODE:
a=float(input("preco: "))
b=float(input("pagamento: "))
if (a>b):
	s=a-b
	print("Falta de ", round(s,2))
else: 
	s=b-a
	print("Troco de ", round(s,2))
	
-- EXECUTION TIME:
0.200366
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta de  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de  0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:09:52) 
-- CODE:
a=float(input("preco: "))
b=float(input("pagamento: "))
if (a>b):
	s=a-b
	print("Falta de", round(s,2))
else: 
	s=b-a
	print("Troco de", round(s,2))
	
-- EXECUTION TIME:
0.145844
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta de 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:10:14) 
-- CODE:
a=float(input("preco: "))
b=float(input("pagamento: "))
if (a>b):
	s=a-b
	print("Falta ", round(s,2))
else: 
	s=b-a
	print("Troco de", round(s,2))
	
-- EXECUTION TIME:
0.161271
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
